k8s/deployment-celery-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
  namespace: loan-default-prediction
  labels:
    app: celery-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      containers:
        - name: celery-worker
          image: loan-default-api:latest  # Same image as API
          imagePullPolicy: IfNotPresent
          command:
            - celery
            - -A
            - src.services.batch_service
            - worker
            - --loglevel=info
            - --concurrency=2
          resources:
            requests:
              memory: "768Mi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          volumeMounts:
            - name: mlflow-storage
              mountPath: /app/mlflow
      volumes:
        - name: mlflow-storage
          persistentVolumeClaim:
            claimName: mlflow-storage
